--- a/common-client/build.gradle
+++ b/common-client/build.gradle
@@ -3,7 +3,8 @@ plugins {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-common"
-    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common"
-    testCompile "org.jetbrains.kotlin:kotlin-test-common"
+    compile project(':common')
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-common'
+    testCompile 'org.jetbrains.kotlin:kotlin-test-annotations-common'
+    testCompile 'org.jetbrains.kotlin:kotlin-test-common'
 }
