--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,18 +3,29 @@ plugins {
     id 'kotlin-platform-jvm' version '1.2.70'
 }
 
+apply plugin: 'kotlin-spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'kotlin-allopen'
+
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    expectedBy project(":common")
-    testCompile "junit:junit:4.12"
-    testCompile "org.jetbrains.kotlin:kotlin-test"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit"
+    compile('org.jetbrains.kotlin:kotlin-stdlib-jdk8')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+    compile('org.jetbrains.kotlin:kotlin-reflect')
+    runtime('com.h2database:h2')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    expectedBy project(':common')
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.jetbrains.kotlin:kotlin-test'
+    testCompile 'org.jetbrains.kotlin:kotlin-test-junit'
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = '1.8'
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = '1.8'
 }
-sourceCompatibility = "1.8"
+sourceCompatibility = '1.8'
