--- a/server/build.gradle
+++ b/server/build.gradle
@@ -24,8 +24,14 @@ dependencies {
 
 compileKotlin {
     kotlinOptions.jvmTarget = '1.8'
+    kotlinOptions {
+        freeCompilerArgs = ['-Xuse-experimental=kotlin.Experimental']
+    }
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = '1.8'
+    kotlinOptions {
+        freeCompilerArgs = ['-Xuse-experimental=kotlin.Experimental']
+    }
 }
 sourceCompatibility = '1.8'
