--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 subprojects {
     buildscript {
-        ext.kotlin_version = '1.2.70'
+        ext.kotlin_version = '1.3.0'
         ext.springBootVersion = '2.0.5.RELEASE'
         ext.kotlinx_html_version = '0.6.11'
+        ext.anko_version='0.10.7'
+        ext.dokka_version='0.9.17'
+        ext.frontend_version='0.0.37'
         repositories {
             jcenter()
             google()
@@ -11,9 +14,10 @@ subprojects {
         }
         dependencies {
             classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-            classpath "org.jetbrains.kotlin:kotlin-frontend-plugin:0.0.37"
-            classpath("org.jetbrains.kotlin:kotlin-allopen:$kotlin_version")
-            classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
+            classpath "org.jetbrains.kotlin:kotlin-frontend-plugin:$frontend_version"
+            classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
+            classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+            classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
         }
     }
 
